--- a/AndroidOnTheWay/res/values/strings.xml
+++ b/AndroidOnTheWay/res/values/strings.xml
@@ -14,8 +14,10 @@
     
     <string name="webview_title">WebView</string>
     <string name="webview_desc">WebView应用</string>
-    <string name="httpclient_title">HttpClient</string>
-    <string name="httpclient_desc">HttpClient应用</string>
+    <string name="http_url_connection">HttpURLConnection</string>
+    <string name="http_client">HttpClient</string>
+    <string name="httpclient_title">Http请求</string>
+    <string name="httpclient_desc">Http应用</string>
     
     <string name="Test_title">测试</string>
     <string name="Test_desc">测试布局所用</string>
