--- a/AndroidOnTheWay/res/values/strings.xml
+++ b/AndroidOnTheWay/res/values/strings.xml
@@ -25,6 +25,9 @@
     <string name="bt_test_title">蓝牙开发</string>
     <string name="bt_test_desc">蓝牙聊天，打开摄像头，一个做服务端一个做客户端</string>
     
+    <string name="broadcast_test_title">广播</string>
+    <string name="broadcast_test_desc">动态注册广播</string>
+    
     <string name="Test_title">测试</string>
     <string name="Test_desc">测试布局所用</string>
     
