--- a/AndroidOnTheWay/res/values/strings.xml
+++ b/AndroidOnTheWay/res/values/strings.xml
@@ -44,8 +44,18 @@
     <string name="interface_test_desc">Interface and Callback</string>
     <string name="interface_test_jieqian">Borrow</string>
     
-    
     <string name="jni_test_title">JNITest</string>
     <string name="jni_test_desc">JNI Test,compiled .so file</string>
+    
+    <string name="custom_switch_title">Custom Switch Button</string>
+    <string name="custom_switch_desc">Switch Style</string>
+    <string name="custom_switch_text_on">ON</string>
+    <string name="custom_switch_text_off">OFF</string>
+    <string name="custom_switch_style_default">default</string>
+    <string name="custom_switch_style_with_status_text">With Status Text</string>
+    <string name="custom_switch_style_nofade_text">Default Style without background fade effect.</string>
+    <string name="custom_switch_style_custom_text">Custom Style</string>
+    <string name="custom_switch_style_flyme5_text">Flyme5 Style</string>
+    <string name="custom_switch_style_miui7_text">MIUI7 Style</string>
 
 </resources>
